# orchestrator-dashboard

./: .gitignore  Jenkinsfile  README.md  migrate_db.py  orchdashboard.py  orchdashboard_debug.py  orchdashboard_dev.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/: __init__.py  config-sample.json  errors.py  extensions.py  iam.py  info.py  routes.py  settings.py  sla.py  utils.py  vault.py
app/deployments/: routes.py
app/errors/: routes.py
app/home/: routes.py
app/lib/: ToscaInfo.py  Vault.py  VaultClient.py  alembic_helper.py  auth.py  cmdb.py  dbhelpers.py  decoders.py  egicheckin.py  fed_reg.py  iam_groups.py  indigoiam.py  ldap_user.py  mail_utils.py  openstack.py  orchestrator.py  path_utils.py  providers.py  pycharm_flask_debug_patch.py  redis_helper.py  s3.py  settings.py  sqlalchemy_helpers.py  strings.py  tosca_info.py  utils.py  yourls.py
app/models/: DbVersion.py  Deployment.py  OAuth.py  Service.py  ServiceAccess.py  Setting.py  User.py  UsersGroup.py
app/providers/: routes.py  sla.py
app/swift/: swift.py
app/users/: routes.py
app/vault/: routes.py
config/: ai4eosc.py  deep.py  default.py  default.py.sample  icsc.py  infn-cloud.py  intertwin.py  laniakea.py  recas.py
config/schemas/: metadata_schema.json
docker/: Dockerfile  start.sh
jenkins/: docker.Jenkinsfile  linting.Jenkinsfile  tests.Jenkinsfile
migrations/versions/: 514c0e87e61f_ninth_update.py  7e9fa167c199_eighth_update.py  88bc3c2c02a6_initial_migration.py  9461be74dd62_tenth_update.py  98c3d8971d6c_first_update.py  (+11 more)
(+42 files in other folders)
